Centered post pictures, fixed IE word-wrap

--- a/css/base.css
+++ b/css/base.css
@@ -4,6 +4,7 @@
 * {
   padding: 0;
   margin: 0;
+  -ms-box-sizing: border-box;
   box-sizing: border-box; }
 
 html {
@@ -33,6 +34,9 @@ html {
   line-height: 1.6;
   font-family: sans-serif; }
 
+main {
+  display: block; }
+
 body {
   text-rendering: optimizeLegibility;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -42,13 +46,12 @@ p {
   margin: 0;
   display: block;
   margin-bottom: 2rem;
-  hyphens: auto;
-  word-break: break-all;
   /* Non standard for webkit */
   word-break: break-word;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto; }
+  -ms-word-break: break-word;
+  -webkit-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none; }
 
 p ~ .highlighter-rouge {
   margin-top: -1.2rem; }
@@ -445,8 +448,10 @@ table {
   list-style: none; }
 
 .post-figure {
-  max-width: 53ch;
+  max-width: 60ch;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1.6rem; }
 
 .post-figureImage {
@@ -547,7 +552,8 @@ table {
     color: #2F0D28; }
 
   .post {
-    text-align: left; }
+    text-align: left;
+    padding: 0; }
 
   .post-title {
     font-size: 2rem;
