--- a/docs/_stylesheets/modules/_desktop_post.scss
+++ b/docs/_stylesheets/modules/_desktop_post.scss
@@ -1,5 +1,6 @@
 .post {
 	text-align: left;
+    padding: 0;
 }
 
 .post-title {
