--- a/docs/_stylesheets/modules/_post.scss
+++ b/docs/_stylesheets/modules/_post.scss
@@ -60,8 +60,10 @@
 }
 
 .post-figure {
-	max-width: 53ch;
+	max-width: 60ch;
 	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: $base-line-height;
 }
 
