--- a/docs/_stylesheets/partials/_reset.scss
+++ b/docs/_stylesheets/partials/_reset.scss
@@ -4,6 +4,7 @@
     margin: 0;
     -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
+     -ms-box-sizing: border-box;
           box-sizing: border-box;
 }
 
